[package]
name = "simrail"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19.0"
serde = { version = "1.0.152", features = ["derive"] }
reqwest = { version = "0.11.14", features = ["json"] }
crossterm = "0.26.0"
tokio = { version = "1.25.0", features = ["full"] }
serde_json = "1.0.93"
ron = "0.8.0"
