[package]
name = "simrail"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19.0"
serde = { version = "1.0.160", features = ["derive"] }
reqwest = { version = "0.11.16", features = ["json"] }
crossterm = "0.26.1"
tokio = { version = "1.27.0", features = ["full"] }
serde_json = "1.0.96"
ron = "0.8.0"
chrono = { version = "0.4.26", features = ["serde"] }
